# Vulkan2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildProject.bat  makeProject.bat  tatus  vcpkg.json
Vulkan2_projekt/include/: dynamic.hpp
Vulkan2_projekt/src/: dynamic.cpp  main.cpp
scripts/: buildProject-debug.bat  buildProject-makefiles-x64-linux-debug.sh  buildProject-pi-debug.sh  buildProject-release.bat  makeProject-debug.bat  makeProject-makefiles-arm64-linux-debug.sh  makeProject-makefiles-x64-linux-debug.sh  makeProject-vs2022-x64-release.bat
src/: dynamic.cpp  main.cpp
src/include/: dynamic.hpp  macros.hpp  macross.hpp
